<resources>
    <string name="app_name">Fitness Journal</string>

    <!--  Image descriptions  -->
    <string name="floating_btn_description">Add exercise</string>

    <!--New Exercise-->
    <string name="exercise_name_label">Name of exercise</string>
    <string name="exercise_set_number_label"># sets</string>
    <string name="exercise_weight_label">Weight (kg)</string>
    <string name="exercise_extra_notes_label">Extra notes</string>
    <string name="btn_save_exercise">Save Exercise</string>

    <!--Success Page-->
    <string name="success_main_text">Congratulations!</string>
    <string name="success_sub_text">You just saved a exercise</string>

    <!--    Item Exercise -->
    <string name="item_exercise_placeholder_text">Some text here</string>
</resources>
