<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/exercise_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/exercise_name"
        android:text="@string/exercise_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        />
    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="300dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/exercise_name_label"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/exercise_name_label"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/exercise_set_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/exercise_set_number"
        android:text="@string/exercise_set_number_label"
        app:layout_constraintStart_toStartOf="@id/exercise_name"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/exercise_set_number"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/exercise_set_number_label"
        app:layout_constraintStart_toEndOf="@id/exercise_set_number_label"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/exercise_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/exercise_weight"
        android:text="@string/exercise_weight_label"
        app:layout_constraintStart_toEndOf="@id/exercise_set_number"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        />
    <EditText
        android:id="@+id/exercise_weight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/exercise_weight_label"
        app:layout_constraintStart_toEndOf="@id/exercise_weight_label"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/exercise_extra_notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/exercise_extra_notes"
        android:text="@string/exercise_extra_notes_label"
        app:layout_constraintStart_toStartOf="@id/exercise_name"
        app:layout_constraintTop_toBottomOf="@id/exercise_weight"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/exercise_extra_notes"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/exercise_extra_notes_label"
        app:layout_constraintStart_toStartOf="@id/exercise_extra_notes_label"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/btn_save_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>